fix: :bug: a tag overflow around button and site icon
pressing around button also clicks it.

--- a/src/app/reusable_components/custom_button/custom_button.css
+++ b/src/app/reusable_components/custom_button/custom_button.css
@@ -12,7 +12,10 @@
 }
 
 .button-link {
+  border-radius: 2.5rem;
   text-decoration: none;
+  width: max-content;
+  display: block;
 }
 
 @media (max-width: 768px) {
